Fixed styling spacing issue with daily charts on daily performance charts page

--- a/react-vite/src/components/DailyCharts/daily-chart.css
+++ b/react-vite/src/components/DailyCharts/daily-chart.css
@@ -1,12 +1,20 @@
 .clientDCdata {
   display: flex;
   flex-flow: column nowrap;
+  flex-grow: 1;
+}
+
+.chartsContain {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 20px;
 }
 
 .chartCrudBtns {
   display: flex;
   gap: 5px;
   margin: 5px 0 0 0;
+  justify-content: center;
 }
 
 .dcButtons {
